# HAZARD

./: .gitignore  LICENCE  README.md  calc_value.py  challenge.py  model.py  pyproject.toml  requirements.txt  run_experiments.py  starter_code.py  test_H.sh  test_LLM.sh  test_RL.sh
data/: analyst.py  categories.txt  convert_data_fire_flood.py  convert_target.py  convert_urls.py  download_assets.py  gen_info.py  value.json
data/meta_data/: make_new.py  temperature.json
data/scripts/: analyst.py  convert_target.py  download_assets.py  gen_info.py
datamaker/: fire_scene_gen.py  grid.txt  wind_scene_gen.py
documentation/agents/: LLM-based agent.md  MCTS-diff_agent.md  MCTS_agent.md  action_space.md  agent.md  custom_agent.md  greedy_agent.md  observations.md  random_agent.md  rl_agent.md  rule_based_agent.md
documentation/scene/: scene.md
llm/: chat_raw.json  colors.txt  prompt_change_reasoner.csv
policy/: astar.py  change_reasoner.py  custom.py  env_actions.py  fire_flood_heuristic.py  human.py  llm.py  llm_v2.py  llm_v3.py  mcts.py  mctsv2.py  oracal.py  random.py  record_agent.py  rl.py  rule_based.py  wind_heuristic.py
ppo/: main_fire.py  main_flood.py  main_wind.py  run.sh  test_fluid_env.py
scenes/: batch.py  change.py  fire_name.json  fire_scene_gen.py  fluid_name.json  gen_info.py  get_category.py  mmdatagen.py  mmdatagen_wind.py  procgen_object_placement.py  scene_generate.py  utils.py  value_name.json  wind_scene_gen.py
utils/: UI.py  calc_value.py  distributions.py  local_asset.py  model.py  scene_setup.py  seg_id.py  vision.py  vision_dino.py
(+1686 files in other folders)
