[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "HAZARD"
version = "0.0.1"
authors = [
  { name="Qinhong Zhou", email="zhouqqhh@gmail.com" },
  { name="Sunli Chen", email="sl-chen20@mails.tsinghua.edu.cn" },
]
description = "An embodied decision making challenge in dynamically changing environment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zhouqqhh/HAZARD"
Issues = "https://github.com/zhouqqhh/HAZARD/issues"
